[gd_scene load_steps=6 format=3 uid="uid://ytsmkjylreeo"]

[ext_resource type="Script" path="res://scenes/Game_World/starting_room.gd" id="1_1mjch"]
[ext_resource type="Texture2D" uid="uid://c0by7ibupcpfm" path="res://assets/Sprites/Rooms/Start_Room/Beginning_Choose_A_Door.png" id="1_w27wj"]
[ext_resource type="Texture2D" uid="uid://c0v2s71l80cdk" path="res://assets/Sprites/Rooms/Start_Room/Dean's_Path_Chosen.png" id="2_mieam"]
[ext_resource type="Texture2D" uid="uid://getnxv6vvojs" path="res://assets/Sprites/Rooms/Start_Room/Emma's_Path_Chosen.png" id="3_jbsjn"]
[ext_resource type="Script" path="res://scenes/Systems/next_room.gd" id="7_v48dx"]

[node name="StartingRoom" type="Node2D"]
script = ExtResource("1_1mjch")

[node name="Background" type="Node2D" parent="."]

[node name="Background_Original" type="Sprite2D" parent="Background"]
position = Vector2(960, 540)
texture = ExtResource("1_w27wj")

[node name="Background_LeftDoorOpen" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("2_mieam")

[node name="Background_RightDoorOpen" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("3_jbsjn")

[node name="InteractiveAreas" type="Node2D" parent="."]

[node name="LeftDoor_Area" type="Area2D" parent="InteractiveAreas"]
position = Vector2(-149, 169)
collision_layer = 2
script = ExtResource("7_v48dx")
next_scene_path = "res://scenes/Game_World/Emma_Path/emma_hallway_1.tscn"
sound_path = "res://assets/Audio/SFX/door.mp3"
transition_type = "left_door"
play_sound = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractiveAreas/LeftDoor_Area"]
position = Vector2(555, 294)
scale = Vector2(50, 44.25)
polygon = PackedVector2Array(-6, -5.79661, -5.46, -7.28814, -4.6, -8.64407, -3.36, -9.63842, -2.2, -10.0678, -0.76, -10.4746, 0.620001, -10.452, 1.82, -10.2034, 3.32, -9.57062, 4.48, -8.50847, 5.48, -6.61017, 5.84, -4.55367, 6.88, 5.29943, -6.94, 5.29943, -6.28, -3.9661)

[node name="RightDoor_Area" type="Area2D" parent="InteractiveAreas"]
position = Vector2(498, -24)
collision_layer = 2
script = ExtResource("7_v48dx")
next_scene_path = "res://scenes/Game_World/Dean_Path/dean_hallway_1.tscn"
sound_path = "res://assets/Audio/SFX/door.mp3"
transition_type = "right_door"
play_sound = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractiveAreas/RightDoor_Area"]
position = Vector2(1, 1)
polygon = PackedVector2Array(643, 720, 674, 305, 707, 185, 744, 126, 792, 80, 864, 45, 980, 29, 1100, 44, 1194, 96, 1246, 174, 1279, 281, 1333, 726)
